# bcri

./: LICENSE  README.md  pyproject.toml
bcri/: __init__.py  metrics.py  pre_processing.py
