[tool.poetry]
name = "bcri"
version = "0.1.0"
description = "Information theoretic metrics for single cell RNA and BCR"
authors = ["jonlevi <jonalevine1@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.10"
scanpy = "^1.10.4"
numpy = "^1.26.1"
tqdm = "^4.67.0"
pandas = "^2.2.3"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

